--- a/LearnManagement.Web/Views/_ViewImports.cshtml
+++ b/LearnManagement.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LearnManagement.Web
+@using LearnManagement.Web.Data;
 @using LearnManagement.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
