--- a/LearnManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LearnManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -7,9 +7,9 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-success" asp-action="Create"><i class="fa-solid fa-plus"></i> Create New</a>
 </p>
-<table class="table">
+<table id="leaveTypeTable" class="table">
     <thead>
         <tr>
             <th>
@@ -33,11 +33,41 @@
                     @Html.DisplayFor(modelItem => item.DefaultDays)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="far fa-edit"></i>Edit</a> |
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-solid fa-eye"></i> Details</a> |
+                    @* <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a> *@
+                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" asp-route-id="@item.Id"><i class="fa-regular fa-trash-can"></i> Delete</button>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+<form id="deleteForm" asp-action="Delete">
+    <input type="hidden" id="leaveTypeId" name="Id" />
+</form>
+
+@section Scripts {
+    <script>
+        $(function () {
+            $('#leaveTypeTable').DataTable();
+
+            $('.deleteBtn').click(function (e) {
+                swal({
+                    title: "Are you sure?",
+                    text: "Are you sure you want to delete this record?",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if (confirm) {
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $('#leaveTypeId').val(id);
+                        $('#deleteForm').submit();
+                    }
+                });
+            });
+        });
+    </script>
+}
