--- a/LearnManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LearnManagement.Web/Views/Shared/_Layout.cshtml
@@ -31,17 +31,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="Privacy">My Leave</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Leave Management
-                            </a>
-                            <ul class="dropdown-menu" aria-labeledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
-                                <li><a class="dropdown-item" href="#">Leave Allocations</a></li>
-                                <li><a class="dropdown-item" href="#">Leave Requests</a></li>
-                                <li><a class="dropdown-item" href="#">Employee Management</a></li>
-                            </ul>
-                        </li>
+                        @if (User.IsInRole(Roles.Adminstration))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Leave Management
+                                </a>
+                                <ul class="dropdown-menu" aria-labeledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
+                                    <li><a class="dropdown-item" href="#">Leave Allocations</a></li>
+                                    <li><a class="dropdown-item" href="#">Leave Requests</a></li>
+                                    <li><a class="dropdown-item" href="#">Employee Management</a></li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
