--- a/LearnManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LearnManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -33,6 +33,7 @@
                     @Html.DisplayFor(modelItem => item.DefaultDays)
                 </td>
                 <td>
+                    <button data-id="@item.Id" class="btn btn-primary allocationBtn" asp-route-id="@item.Id"> Allocate Leave </button>
                     <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="far fa-edit"></i>Edit</a> |
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-solid fa-eye"></i> Details</a> |
                     @* <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a> *@
@@ -43,6 +44,9 @@
     </tbody>
 </table>
 
+<form id="allocationForm" asp-action="AllocateLeave">
+    <input type="hidden" id="leaveTypeId" name="Id" />
+</form>
 <form id="deleteForm" asp-action="Delete">
     <input type="hidden" id="leaveTypeId" name="Id" />
 </form>
@@ -65,6 +69,22 @@
                         var id = btn.data("id");
                         $('#leaveTypeId').val(id);
                         $('#deleteForm').submit();
+                    }
+                });
+            });
+            $('.allocationBtn').click(function (e) {
+                swal({
+                    title: "Are you sure?",
+                    text: "Are you sure you want to allocate this leave to all employees?",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if (confirm) {
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $('#leaveTypeId').val(id);
+                        $('#allocationForm').submit();
                     }
                 });
             });
