Saving final changes to Section 8. Implementing employee actions and views.

--- a/LearnManagement.Web/Views/Employees/Index.cshtml
+++ b/LearnManagement.Web/Views/Employees/Index.cshtml
@@ -41,9 +41,7 @@
                     @Html.DisplayFor(modelItem => item.DateJoined)
                 </td>
                 <td>
-
-                    <a asp-action="ViewAllocation" asp-controller="Employees" class="btn btn-primary" asp-route-id="@item.Id">View Allocation</a> |
-
+                    <a asp-action="ViewAllocation" asp-controller="Employees" class="btn btn-primary" asp-route-id="@item.Id">View Allocation</a>
                 </td>
             </tr>
         }
