--- a/LearnManagement.Web/Views/Employees/ViewAllocation.cshtml
+++ b/LearnManagement.Web/Views/Employees/ViewAllocation.cshtml
@@ -41,23 +41,39 @@
         <h4>Leave Allocations</h4>
     </div>
     <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col">Leave Name</div>
+                <div class="col">Original Allocation</div>
+                <div class="col">Current Allocation</div>
+                <div class="col">Action</div>
+            </div>
+        </li>
         @foreach (var allocation in Model.LeaveAllocations)
         {
+
             <li class="list-group-item">
-                <h6>
-                    @allocation.LeaveType.Name
-                    <button type="button" class="btn btn-primary">
-                        Allocation Days <span class="badge bg-secondary">@allocation.LeaveType.DefaultDays</span>
-                    </button>
-                    <button type="button" class="btn btn-primary">
-                        Remaining Days <span class="badge bg-secondary">@allocation.NumberOfDays</span>
-                    </button>
-                </h6>
-                <a class="btn btn-warning" asp-action="EditAllocation" asp-route-id="@allocation.Id"><i class="fas fa-pendcil-alt"></i>Edit</a>
+                <div class="row">
+                    <div class="col"><h6>@allocation.LeaveType?.Name</h6></div>
+                    <div class="col">
+                        <button type="button" class="btn btn-primary">
+                            Allocation Days <span class="badge bg-secondary">@allocation.LeaveType?.DefaultDays</span>
+                        </button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-primary">
+                            Remaining Days <span class="badge bg-secondary">@allocation.NumberOfDays</span>
+                        </button>
+                    </div>
+                    <div class="col">
+                        <a class="btn btn-warning" asp-action="EditAllocation " asp-route-id="@allocation.Id"><i class="fas fa-pendcil-alt"></i>Edit</a>
+                    </div>
+                </div>
             </li>
         }
     </ul>
 </div>
+<br />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-dark">Back to List</a>
 </div>
