--- a/LearnManagement.Web/Views/Employees/EditAllocation.cshtml
+++ b/LearnManagement.Web/Views/Employees/EditAllocation.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit Allocation";
 }
 
-<h1>EditAllocation for @Model.Employee.Firstname @Model.Employee.Lastname | {@Model.LeaveType?.Name}</h1>
+<h1>EditAllocation for @Model.Employee?.Firstname @Model.Employee?.Lastname | {@Model.LeaveType?.Name}</h1>
 
 <hr />
 <div class="row">
@@ -27,7 +27,8 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-dark">Back to List</a> &nbsp;
+                <input type="submit" value="Save" class="btn btn-primary btn-block" />
             </div>
         </form>
     </div>
