--- a/LearnManagement.Web/Views/LeaveRequests/Create.cshtml
+++ b/LearnManagement.Web/Views/LeaveRequests/Create.cshtml
@@ -13,11 +13,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="LeaveTypeId" class="control-label"></label>
-                <select asp-for="LeaveTypeId" class="form-select" asp-items="Model.LeaveTypes">
+                <select asp-for="LeaveTypeId" asp-items="Model?.LeaveTypes" class="form-select">
                     <option>Select Leave Type</option>
                 </select>
                 <span asp-validation-for="LeaveTypeId" class="text-danger"></span>
             </div>
+            <br />
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -42,7 +43,7 @@
             </div>
             <br />
             <div class="form-group">
-                <a class="btn btn-secondary btn-block" asp-action="Index">Back to List</a>
+                <a class="btn btn-dark" asp-action="MyLeave">Cancel</a>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
