--- a/LearnManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LearnManagement.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="LeaveRequests" asp-action="Index">Apply for leave</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="Privacy">My Leave</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="LeaveRequests" asp-action="MyLeave">My Leave</a>
                         </li>
                         @if (User.IsInRole(Roles.Adminstration))
                         {
